AzureOpenai for link_prediction.py

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DEEPSEEK_API = sk-e5f8e0afff52485682dc35cb952c57df
+OPENAI_API_KEY="DduOBM..."
+OPENAI_API_VERSION="2024-12-01-preview"
+OPENAI_API_ENDPOINT="https://minhm-maxegnfl-eastus2.cognitiveservices.azure.com/"
