--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ dataset.zip
 !requirements.txt
 dataset/.DS_Store
 datasets/fb15k-237/.gitkeep
-datasets/fb15k-237/.gitkeep
+datasets/wn18rr/.gitkeep
