GPT-4.1-nano, improve prompts

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DEEPSEEK_API = sk-e5f8e0afff52485682dc35cb952c57df
+DEEPSEEK_API = ""
 OPENAI_API_KEY=""
 OPENAI_API_VERSION=""
 OPENAI_API_ENDPOINT=""
+DEPLOYMENT_NAME='gpt-4.1-nano'
